fixed color issues, including blue text on mobile

--- a/src/styles/abstracts/variables.scss
+++ b/src/styles/abstracts/variables.scss
@@ -1,5 +1,4 @@
 $black: #0a0a0a;
 $white: #ffffff;
 $grey: #eeeeee;
-$heart: #ff0000;
 $shadow: 0 2px 10px rgba(0, 0, 0, 0.1), 3px 5px 20px rgba(0, 0, 0, 0.2);
