--- a/src/styles/base/defaults.scss
+++ b/src/styles/base/defaults.scss
@@ -25,6 +25,7 @@ button {
 	border: none;
 	cursor: pointer;
 	padding: 0;
+	color: var.$black;
 }
 ul {
 	list-style: none;
