--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -1,10 +1,8 @@
-@use "../abstracts/variables" as var;
 footer {
 	display: flex;
 	justify-content: center;
 	margin-top: auto;
 	i {
 		margin-left: 4px;
-		color: var.$heart;
 	}
 }
