--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -11,7 +11,7 @@
 	nav {
 		ul {
 			display: flex;
-			padding: 15px 0 10px;
+			padding: 15px 0;
 			li {
 				a {
 					display: grid;
