--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -10,11 +10,6 @@
 			display: flex;
 			justify-content: center;
 		}
-		i {
-			font-size: 18px;
-			margin-left: 5px;
-			margin-bottom: 5px;
-		}
 	}
 }
 
